<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_habitat"
            android:title="@string/liste_des_habitats"
            android:icon="@drawable/ic_home" />

        <item
            android:id="@+id/nav_choisir_habitat"
            android:title="@string/choisir_habitat"
            android:icon="@drawable/ic_home" />

        <item
            android:id="@+id/nav_ajouter_equipement"
            android:title="@string/ajouter_equipement"
            android:icon="@drawable/ic_add" />

        <item
            android:id="@+id/nav_mon_habitat"
            android:title="@string/mon_habitat"
            android:icon="@drawable/ic_habitat" />

        <item
            android:id="@+id/nav_notifications"
            android:title="@string/mes_notifications"
            android:icon="@drawable/ic_notifications" />

        <item
            android:id="@+id/nav_ajouter_time_slot"
            android:title="@string/ajouter_time_slot"
            android:icon="@drawable/ic_time" />

        <item
            android:id="@+id/nav_ajouter_usage"
            android:title="@string/ajouter_usage"
            android:icon="@drawable/ic_time" />

        <item
            android:id="@+id/nav_mes_engagements"
            android:title="@string/mes_engagements"
            android:icon="@drawable/ic_checklist" />

        <item
            android:id="@+id/nav_preferences"
            android:title="@string/mes_pr_f_rences"
            android:icon="@drawable/ic_settings" />

        <item
            android:id="@+id/nav_apropos"
            android:title="@string/propos"
            android:icon="@drawable/ic_info" />

        <item
            android:id="@+id/nav_deconnexion"
            android:title="@string/d_connexion"
            android:icon="@drawable/ic_logout" />

    </group>

</menu>