<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etNomEquipement"
            android:hint="@string/nom_de_l_quipement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <EditText
            android:id="@+id/etReferenceEquipement"
            android:hint="@string/r_f_rence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <EditText
            android:id="@+id/etWattageEquipement"
            android:hint="@string/puissance_w"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <Button
            android:id="@+id/btnAjouterEquipement"
            android:text="@string/ajouter"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>