<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/splash_background">

    <ImageView
        android:id="@+id/ivEnergyIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_energy"
        android:contentDescription="@string/app_icon"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/tvWelcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_energy_management"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tvEnergyInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/energy_info"
        android:textSize="16sp"
        android:textColor="#757575"
        android:gravity="center"
        android:layout_marginBottom="30dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/CustomProgressBar"
        android:indeterminate="true"
        android:layout_marginTop="20dp"/>
</LinearLayout>
